--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@ layout: default
     This site will have archives of the Darby Announcements
   </p>
   
-  <p><a class="btn btn-primary btn-lg" href="{{ site.github.url | replace_first:'http://','https://' }}/posts.html" role="button">List of Announcements</a></p>
+  <p>
+    <a class="btn btn-success btn-lg" href="{{ site.posts[0].url | prepend: site.github.url | replace_first:'http://','https://' }}" role="button">
+      Latest Announcements
+    </a>
+    <a class="btn btn-primary btn-lg" href="{{ site.github.url | replace_first:'http://','https://' }}/posts.html" role="button">
+      List of Announcements
+    </a>
+  </p>
 </div>
 
 
