Move latest to improve git changelogs and pull requests.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
   </p>
   
   <p>
-    <a class="btn btn-success btn-lg" href="{{ site.posts[0].url | prepend: site.github.url | replace_first:'http://','https://' }}" role="button">
+    <a class="btn btn-success btn-lg" href="{{ site.github.url | replace_first:'http://','https://' }}/latest.html" role="button">
       Latest Announcements
     </a>
     <a class="btn btn-primary btn-lg" href="{{ site.github.url | replace_first:'http://','https://' }}/posts.html" role="button">
