--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ layout: default
     <a class="btn btn-success btn-lg" href="{{ site.github.url | replace_first:'http://','https://' }}/latest.html" role="button">
       Latest Announcements
     </a>
+    <a class="btn btn-info btn-lg" href="{{ site.github.url | replace_first:'http://','https://' }}/slides.html" role="button">
+      Slideshow
+    </a>
     <a class="btn btn-primary btn-lg" href="{{ site.github.url | replace_first:'http://','https://' }}/posts.html" role="button">
       List of Announcements
     </a>
