--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
       Slideshow
     </a>
     <a class="btn btn-primary btn-lg" href="{{ site.github.url | replace_first:'http://','https://' }}/posts.html" role="button">
-      List of Announcements
+      Archives
     </a>
   </p>
 </div>
