Initial layout for screen.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@ layout: default
     <a class="btn btn-info btn-lg" href="{{ site.github.url | replace_first:'http://','https://' }}/slides.html" role="button">
       Slideshow
     </a>
+    <a class="btn btn-info btn-lg" href="{{ site.github.url | replace_first:'http://','https://' }}/screen.html" role="button">
+      Screen
+    </a>
     <a class="btn btn-primary btn-lg" href="{{ site.github.url | replace_first:'http://','https://' }}/posts.html" role="button">
       Archives
     </a>
