--- a/screen.html
+++ b/screen.html
@@ -10,8 +10,14 @@ layout: screen
       </div>
     </div>
     <div class="col-md-4">
-    <iframe src='https://hilliardschools.gofmx.com/embed/calendar?search=&buildings=49057&view=agenda' style='width: 100%; height: 100%; border: 2px solid #e6e6e6; border-radius: 4px;'>
-</iframe>
+      <iframe src='https://hilliardschools.gofmx.com/embed/calendar?search=&buildings=49057&view=agenda' 
+        style='width: 100%; height: 100%; border: 2px solid #e6e6e6; border-radius: 4px;'>
+      </iframe>
     </div>
   </div>
+  <marquee scrollamount="5">
+    {% for item in site.data.scroll %}
+      {{ item.text }} | 
+    {% endfor %}
+  </marquee>
 </div>
