--- a/screen.html
+++ b/screen.html
@@ -16,7 +16,7 @@ layout: screen
     </div>
   </div>
   <marquee scrollamount="5">
-    {% for item in site.data.scroll %}
+    {% for item in site.data.scroll.scroll %}
       {{ item.text }} | 
     {% endfor %}
   </marquee>
