--- a/screen.html
+++ b/screen.html
@@ -17,7 +17,7 @@ layout: screen
   </div>
   <marquee scrollamount="5">
     {% for header in site.data.scroll.scroll.header %}
-      <span class="label label-{{header.type | default: 'default'}}">{{ header.text }}</span>
+      <span class="label label-{{header.type | default: 'default'}}">{{ header.title }}</span>
       {% for item in header.scroll %}
         <span class="label label-{{item.type | default: 'default'}}">{{ item.text }}</span>
       {% endfor %}
