--- a/screen.html
+++ b/screen.html
@@ -11,12 +11,12 @@ layout: screen
     </div>
     <div class="col-md-4">
       <iframe src='https://hilliardschools.gofmx.com/embed/calendar?search=&buildings=49057&view=agenda' 
-        style='width: 100%; height: 100%; border: 2px solid #e6e6e6; border-radius: 4px;'>
+        style='width: 92.5%; height: 100%; border: 2px solid #e6e6e6; border-radius: 4px; position: absolute;'>
       </iframe>
     </div>
   </div>
   <marquee scrollamount="5" style="font-size: large;">
-    {% for header in site.data.scroll.scroll.header %}
+    {% for header in site.data.scroll.header %}
       <span class="label label-{{ header.type | default: 'default' }}">{{ header.title }}</span>
       {% for item in header.scroll %}
         <span class="label label-{{ item.type | default: 'default' }}">{{ item.text }}</span>
