--- a/screen.html
+++ b/screen.html
@@ -2,6 +2,10 @@
 layout: screen
 ---
 
+<div class="alert alert-danger visible-xs-block visible-sm-block" role="alert">
+  <strong>Warning:</strong> This page does not work yet on small screens, Please increase your screen size until this message disappears and refresh the page.
+</div>
+
 <div class="container-fluid">
   <div class="row row-eq-height">
     <div class="col-md-9">
