--- a/screen.html
+++ b/screen.html
@@ -22,15 +22,37 @@ layout: screen
     </div>
     <hr>
     <marquee scrollamount="5" style="font-size: large;">
+      <i class="fa fa-ellipsis-h"></i>
+      <span class="label label-info">
+        <i class="fa fa-github-square"></i>
+        Site Metadata
+      </span>
+      <span class="label label-default">
+        <i class="fa fa-clock-o"></i>
+        Last Updated: {{ site.time | date: '%B %d, %Y' }}
+      </span>
+      <span class="label label-default">
+        <i class="fa fa-git-square"></i>
+        Commit: {{ site.github.build_revision | slice: 0,6}}
+      </span>
       {% for header in site.data.scroll.header %}
-        <span class="label label-{{ header.type | default: 'default' }}">{{ header.title }}</span>
+        <i class="fa fa-ellipsis-h"></i>
+        <span class="label label-{{ header.type | default: 'default' }}">
+          {% if header.icon %} 
+            <i class="fa fa-{{ header.icon }}"></i>
+          {% endif %}
+          {{ header.title }}
+        </span>
         {% for item in header.scroll %}
-          <span class="label label-{{ item.type | default: 'default' }}">{{ item.text }}</span>
+          <span class="label label-{{ item.type | default: 'default' }}">
+            % if header.icon %} 
+              <i class="fa fa-{{ item.icon }}"></i>
+            {% endif %}
+            {{ item.text }}
+          </span>
         {% endfor %}
       {% endfor %}
-      <span class="label label-info">Site Metadata</span>
-      <span class="label label-default">Last Updated: {{ site.time | date: '%B %d, %Y' }}</span>
-      <span class="label label-default">Commit: {{ site.github.build_revision | slice: 0,6}}</span>
+      <i class="fa fa-ellipsis-h"></i>
     </marquee>
   </div>
 </div>
