--- a/screen.html
+++ b/screen.html
@@ -4,7 +4,16 @@ overrideheader: "5%"
 ---
 
 <div class="alert alert-danger visible-xs-block visible-sm-block" role="alert">
-  <strong>Warning:</strong> This page does not work yet on small screens, Please increase your screen size until this message disappears and refresh the page.
+  <strong>Warning:</strong> This page does not work yet on small screens.
+  Please increase your screen size until this message disappears.
+  <br>
+  If you are on a screen that can't increase the size any more, such as a mobile phone,
+  go to <a class="alert-link" 
+  href="{{ site.github.url | replace_first:'http://','https://' }}/latest.html">
+  the latest announcements</a> or 
+  <a class="btn btn-info btn-lg" 
+  href="{{ site.github.url | replace_first:'http://','https://' }}/slides.html">the slideshow</a>.
+  Both have the same information.
 </div>
 
 <div class="visible-md-block visible-lg-block">
