Oops. Button too big.

--- a/screen.html
+++ b/screen.html
@@ -11,7 +11,7 @@ overrideheader: "5%"
   go to <a class="alert-link" 
   href="{{ site.github.url | replace_first:'http://','https://' }}/latest.html">
   the latest announcements</a> or 
-  <a class="btn btn-info btn-lg" 
+  <a class="alert-link" 
   href="{{ site.github.url | replace_first:'http://','https://' }}/slides.html">the slideshow</a>.
   Both have the same information.
 </div>
