Change header height

--- a/screen.html
+++ b/screen.html
@@ -1,6 +1,6 @@
 ---
 layout: screen
-overrideheader: "5%"
+overrideheader: "30px"
 ---
 
 <div class="alert alert-danger visible-xs-block visible-sm-block" role="alert">
