--- a/screen.html
+++ b/screen.html
@@ -31,7 +31,7 @@ overrideheader: "30px"
       </div>
     </div>
     <hr>
-    <marquee scrollamount="5" style="font-size: x-large;">
+    <div class="marquee">
       <span class="label label-default">
         <i class="fa fa-ellipsis-v"></i>
       </span>
@@ -81,6 +81,6 @@ overrideheader: "30px"
       <span class="label label-default">
         <i class="fa fa-ellipsis-v"></i>
       </span>
-    </marquee>
+    </div>
   </div>
 </div>
