--- a/screen.html
+++ b/screen.html
@@ -31,7 +31,7 @@ overrideheader: "30px"
       </div>
     </div>
     <hr>
-    <div class="marquee">
+    <div class="marquee" style="font-size: x-large;">
       <span class="label label-default">
         <i class="fa fa-ellipsis-v"></i>
       </span>
