--- a/screen.html
+++ b/screen.html
@@ -3,6 +3,11 @@ layout: screen
 overrideheader: "30px"
 ---
 
+<style>
+ body {width:100%; height:100%; overflow:hidden; margin:0; }
+ html {width:100%; height:100%; overflow:hidden; }
+</style>
+
 <div class="alert alert-danger visible-xs-block visible-sm-block" role="alert">
   <strong>Warning:</strong> This page does not work yet on small screens.
   Please increase your screen size until this message disappears.
