--- a/screen.html
+++ b/screen.html
@@ -30,9 +30,7 @@ overrideheader: "30px"
         </div>
       </div>
       <div class="col-md-3">
-        <iframe src='https://hilliardschools.gofmx.com/embed/calendar?search=&buildings=49057&view=agenda' 
-          style='width: 92.5%; height: 100%; border: 2px solid #e6e6e6; border-radius: 4px; position: absolute;'>
-        </iframe>
+        <div id='calendar'></div>
       </div>
     </div>
     <hr>
