--- a/screen.html
+++ b/screen.html
@@ -34,54 +34,6 @@ hascal: true
         <div id='calendar'></div>
       </div>
     </div>
-    <hr>
-    <div class="marquee" style="font-size: x-large;">
-      <span class="label label-default">
-        <i class="fa fa-ellipsis-v"></i>
-      </span>
-      <span class="label label-info">
-        <i class="fa fa-github-square"></i>
-        Site Metadata
-      </span>
-      <span class="label label-default">
-        <i class="fa fa-ellipsis-v"></i>
-      </span>
-      <span class="label label-default">
-        <i class="fa fa-clock-o"></i>
-        Last Updated: {{ site.time | date: '%B %d, %Y' }}
-      </span>
-      <span class="label label-default">
-        <i class="fa fa-ellipsis-v"></i>
-      </span>
-      <span class="label label-default">
-        <i class="fa fa-git-square"></i>
-        Commit: {{ site.github.build_revision | slice: 0,6}}
-      </span>
-      {% for header in site.data.scroll.header %}
-        <span class="label label-default">
-          <i class="fa fa-ellipsis-v"></i>
-        </span>
-        <span class="label label-{{ header.type | default: 'default' }}">
-          {% if header.icon %} 
-            <i class="fa fa-{{ header.icon }}"></i>
-          {% endif %}
-          {{ header.title }}
-        </span>
-        {% for item in header.scroll %}
-          <span class="label label-default">
-            <i class="fa fa-ellipsis-v"></i>
-          </span>
-          <span class="label label-{{ item.type | default: 'default' }}">
-            {% if header.icon %} 
-              <i class="fa fa-{{ item.icon }}"></i>
-            {% endif %}
-            {{ item.text }}
-          </span>
-        {% endfor %}
-      {% endfor %}
-      <span class="label label-default">
-        <i class="fa fa-ellipsis-v"></i>
-      </span>
-    </div>
+  <iframe src="{{ site.github.url | replace_first:'http://','https://' }}/scroll.html" style="width: 100%; border: none;"></iframe>
   </div>
 </div>
