--- a/screen.html
+++ b/screen.html
@@ -1,12 +1,11 @@
 ---
 layout: screen
 overrideheader: "30px"
-hascal: true
 ---
 
 <style>
- body {width:100%; height:100%; overflow:hidden; margin:0; }
- html {width:100%; height:100%; overflow:hidden; }
+ body {width:100%; height:100%; margin:0; }
+ html {width:100%; height:100%; }
 </style>
 
 <div class="alert alert-danger visible-xs-block visible-sm-block" role="alert">
@@ -31,9 +30,11 @@ hascal: true
         </div>
       </div>
       <div class="col-md-3">
-        <div id='calendar'></div>
+        <!--<div id='calendar'></div>-->
+        <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/DarbyCompClub/lists/hilliard-darby-accounts" data-widget-id="703698748384403462">Tweets from https://twitter.com/DarbyCompClub/lists/hilliard-darby-accounts</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
       </div>
     </div>
-  <iframe src="{{ site.github.url | replace_first:'http://','https://' }}/scroll.html" style="width: 100%; border: none;"></iframe>
+  <iframe src="{{ site.github.url | replace_first:'http://','https://' }}/scroll.html" style="width: 100%; border: none; height: 3em;"></iframe>
   </div>
 </div>
