--- a/scroll.html
+++ b/scroll.html
@@ -2,7 +2,10 @@
 layout: screen
 overrideheader: "0px"
 ---
-
+<style>
+  body {width:100%; height:100%; overflow:hidden; margin:0; }
+  html {width:100%; height:100%; overflow:hidden; }
+</style>
 <div class="marquee" style="font-size: x-large;">
   <span class="label label-default">
     <i class="fa fa-ellipsis-v"></i>
