--- a/screen.html
+++ b/screen.html
@@ -21,20 +21,16 @@ overrideheader: "30px"
   Both have the same information.
 </div>
 
-<div class="visible-md-block visible-lg-block">
-  <div class="container-fluid">
-    <div class="row row-eq-height">
-      <div class="col-md-9">
-        <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="{{ site.github.url | replace_first:'http://','https://' }}/slides.html"></iframe>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <!--<div id='calendar'></div>-->
-        <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/DarbyCompClub/lists/hilliard-darby-accounts" data-widget-id="703698748384403462">Tweets from https://twitter.com/DarbyCompClub/lists/hilliard-darby-accounts</a>
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-      </div>
+<div class="row">
+  <div class="col-md-9">
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item" src="{{ site.github.url | replace_first:'http://','https://' }}/slides.html"></iframe>
     </div>
-  <iframe src="{{ site.github.url | replace_first:'http://','https://' }}/scroll.html" style="width: 100%; border: none; height: 3em;"></iframe>
+  </div>
+  <div class="col-md-3">
+    <!--<div id='calendar'></div>-->
+    <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/DarbyCompClub/lists/hilliard-darby-accounts" data-widget-id="703698748384403462">Tweets from https://twitter.com/DarbyCompClub/lists/hilliard-darby-accounts</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
   </div>
 </div>
+<iframe src="{{ site.github.url | replace_first:'http://','https://' }}/scroll.html" style="width: 100%; border: none; height: 3em;"></iframe>
