--- a/screen.html
+++ b/screen.html
@@ -33,4 +33,4 @@ overrideheader: "30px"
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
   </div>
 </div>
-<iframe src="{{ site.github.url | replace_first:'http://','https://' }}/scroll.html" style="width: 100%; border: none; height: 3em;"></iframe>
+<iframe src="{{ site.github.url | replace_first:'http://','https://' }}/scroll.html" style="width: 100%; border: none; overflow: hidden; height: 3em;"></iframe>
