--- a/scroll.html
+++ b/scroll.html
@@ -5,6 +5,7 @@ overrideheader: "0px"
 <style>
   body {width:100%; height:100%; overflow:hidden; margin:0; }
   html {width:100%; height:100%; overflow:hidden; }
+  marquee {width:100%; height:100%; overflow: hidden; }
 </style>
 <div class="marquee" style="font-size: x-large;">
   <span class="label label-default">
