--- a/scroll.html
+++ b/scroll.html
@@ -3,8 +3,8 @@ layout: screen
 overrideheader: "0px"
 ---
 <style>
-  body {width:100%; height:100%; overflow:hidden; margin:0; }
-  html {width:100%; height:100%; overflow:hidden; }
+  body {width:100%; height:100%; overflow:hidden; position: relative; margin:0; }
+  html {width:100%; height:100%; overflow:hidden; position: relative; }
   marquee {width:100%; height:100%; position: relative; overflow: hidden; }
 </style>
 <div class="marquee" style="font-size: x-large;">
