--- a/screen.html
+++ b/screen.html
@@ -1,23 +1,35 @@
 ---
 layout: screen
 overrideheader: "30px"
+display: main
 ---
 
 <style>
- body {width:100%; height:100%; margin:0; }
- html {width:100%; height:100%; }
+  body {width:100%; height:100%; margin:0; }
+  html {width:100%; height:100%; }
 </style>
 
-<div class="row">
-  <div class="col-md-9">
-    <div class="embed-responsive embed-responsive-4by3">
-      <iframe class="embed-responsive-item" src="{{ site.github.url | replace_first:'http://','https://' }}/slides.html"></iframe>
+{% if page.display == 'main' %}
+  <div class="row">
+    <div class="col-md-9">
+      <div class="embed-responsive embed-responsive-4by3">
+        <iframe class="embed-responsive-item" src="{{ site.github.url | replace_first:'http://','https://' }}/slides.html"></iframe>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <!--<div id='calendar'></div>-->
+      <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/DarbyCompClub/lists/hilliard-darby-accounts" data-widget-id="703698748384403462">Tweets from https://twitter.com/DarbyCompClub/lists/hilliard-darby-accounts</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </div>
   </div>
-  <div class="col-md-3">
-    <!--<div id='calendar'></div>-->
-    <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/DarbyCompClub/lists/hilliard-darby-accounts" data-widget-id="703698748384403462">Tweets from https://twitter.com/DarbyCompClub/lists/hilliard-darby-accounts</a>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-  </div>
-</div>
-<iframe src="{{ site.github.url | replace_first:'http://','https://' }}/scroll.html" style="width: 100%; min-width: 100%; border: none; overflow: hidden; height: 3em;"></iframe>
+  <iframe src="{{ site.github.url | replace_first:'http://','https://' }}/scroll.html" style="width: 100%; min-width: 100%; border: none; overflow: hidden; height: 3em;"></iframe>
+{% elsif page.display == 'scoreboard' %}
+  
+{% endif %}
+<script>
+$.get("{{ site.github.url }}",function(data){
+  if("{{ site.github.commit }}"===data) {
+      location.reload(true);
+    }
+  });
+</script>
