--- a/screen.html
+++ b/screen.html
@@ -1,29 +1,48 @@
 ---
 layout: screen
-overrideheader: "30px"
+overrideheader: "1.25em"
 display: main
 ---
 
 <style>
-  body {width:100%; height:100%; margin:0; }
+  body {width:100%; height:100%; }
   html {width:100%; height:100%; }
+  .row {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1em;
+  }
 </style>
 
 {% if page.display == 'main' %}
   <div class="row">
-    <div class="col-md-9">
-      <h3 id="time"></h3>
+    <div class="col-md-8">
       <div class="embed-responsive embed-responsive-4by3">
         <iframe class="embed-responsive-item" src="{{ site.github.url | replace_first:'http://','https://' }}/slides.html"></iframe>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-4">
       <!--<div id='calendar'></div>-->
       <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/DarbyCompClub/lists/hilliard-darby-accounts" data-widget-id="703698748384403462">Tweets from https://twitter.com/DarbyCompClub/lists/hilliard-darby-accounts</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </div>
   </div>
   <iframe src="{{ site.github.url | replace_first:'http://','https://' }}/scroll.html" style="width: 100%; min-width: 100%; border: none; overflow: hidden; height: 3em;"></iframe>
+
 {% elsif page.display == 'scoreboard' %}
-  
+  <div class="row">
+    <div class="col-md-8">
+      <div class="embed-responsive embed-responsive-4by3">
+        <iframe class="embed-responsive-item" src="{{ site.github.url | replace_first:'http://','https://' }}/scoreboard.html"></iframe>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <!--<div id='calendar'></div>-->
+      <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/DarbyCompClub/lists/hilliard-darby-accounts" data-widget-id="703698748384403462">Tweets from https://twitter.com/DarbyCompClub/lists/hilliard-darby-accounts</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    </div>
+  </div>
+  <iframe src="{{ site.github.url | replace_first:'http://','https://' }}/scroll.html" style="width: 100%; min-width: 100%; border: none; overflow: hidden; height: 3em;"></iframe>
 {% endif %}
+
