--- a/scroll.html
+++ b/scroll.html
@@ -7,7 +7,7 @@ overrideheader: "0px"
   html {width:100%; height:100%; overflow:hidden; position: relative; }
   marquee {width:100%; height:100%; position: relative; overflow: hidden; }
 </style>
-<div class="marquee" style="font-size: x-large;">
+<div class="marquee" style="font-size: x-large; width: auto;">
   <span class="label label-default">
     <i class="fa fa-ellipsis-v"></i>
   </span>
