--- a/scroll.html
+++ b/scroll.html
@@ -1,6 +1,7 @@
 ---
 layout: screen
 overrideheader: "0px"
+setreload: 10
 ---
 <style>
   body {width:100%; height:100%; overflow:hidden; position: relative; margin:0; }
